fix: related products header wrapping on small viewport

--- a/source/stylesheets/product.sass
+++ b/source/stylesheets/product.sass
@@ -143,6 +143,9 @@ section.content
   align-items: center
   margin-bottom: 24px
 
+  @media screen and (max-width: $break-small)
+    display: block
+
   .related-products-view-all-link
     margin-left: auto
     font-weight: 500
